# wam.cpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cpu.yml  cuda-release.yml
apps/: replay.cpp  replay.h  wam-bench.cpp  wam-cli.cpp  wam-compare.cpp
cmake/: ApplyLlamaPatch.cmake  Dependencies.cmake  WamConfig.cmake.in  WamModels.cmake  WamOptions.cmake
include/wam/: c_api.h  types.h  version.h  wam.h
integrations/giga-world-policy/: inference_openloop_wam_cpp.py  run_inference_openloop_wam-cpp.sh
integrations/giga-world-policy/upstream/: 0001-add-wam-cpp-entrypoints.patch
integrations/giga-world-policy/upstream/scripts/: inference_openloop_wam_cpp.py  run_inference_openloop_wam-cpp.sh
patches/: llama-b9866-native-bf16.patch  llama-b9866-p7-fusions.patch
proto/: wam.proto
requirements/: convert.txt  giga-world-policy.txt  server.txt
scripts/common/: __init__.py  gwp05_gguf.py
scripts/convert/: convert_gwp05.py
scripts/inspect/: inspect_gguf.py
scripts/release/: check_source_tree.py  create_source_archive.py  reproduce_cpu.sh  reproduce_source_archive.sh  validate_cuda.sh
scripts/serving/: wam_client.py  wam_proto.py  wam_rpc.py  wam_server.py
src/: arch.h  model.cpp  model_internal.h  model_registry.cpp  model_registry.h
src/models/common/: gguf_reader.cpp  gguf_reader.h  input_validation.cpp  input_validation.h  scheduler.cpp  scheduler.h
src/models/gwp05/: artifact.cpp  artifact.h  inputs.cpp  inputs.h  model.cpp  model.h  semantics.cpp  semantics.h
src/models/gwp05/engine/: cache.cpp  engine.cpp  engine.h  mot.cpp  text_encoder.cpp  vae.cpp  weights.cpp
src/models/gwp05/kernels/: cuda_preprocess.cu  cuda_preprocess.h
src/serving/: c_api.cpp  c_api.h  protocol_adapter.cpp  protocol_adapter.h
